# opencode-config-sync

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/opencode_sync/: __main__.py  cli.py  config.py  conflict.py  core.py  git_ops.py  github.py  utils.py
tests/: test_core.py
